			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01ar: *********************************

IMP: (11/29/04, SMR) Improved name incrementing so that lists are all incremented
     (for example, "A,B" used to become "A,B_1" but now becomes "A_1,B_1").

IMP: (11/28/04, SMR) Added primitive node/arc invisibility when all of their layers
     are invisible, so that they are not selectable.

IMP/MAN: (11/25/04, SMR) Added DXF input.

IMP: (11/25/04, SMR) Added "grid" button to analog waveform window.

IMP: (11/25/04, SMR) Renaming a group shows up in the explorer tree.

IMP/MAN: (11/25/04, SMR) New Arc Preference: Duplicate/Array/Paste auto-increments arc names.

IMP/MAN: (11/25/04, GVG) 3D View: automatic resizing in Z axis in any open 3D view if scale changes.
     New location of scale factor in 3D dialog.

BUG: (11/25/04, GVG) DRC badBoxArea not returning when error found and then wrong good date was stored (Bug #13)
FIX: return inserted

IMP: (11/24/04, SMR) Widened coordinate area in status bar to account for Macintosh font size.

IMP: (11/24/04, SMR) Added hook to clear the cache of expanded cell contents, used by layer visibility.

IMP: (11/24/04, SMR) Spice netlister no longer forces power and ground to be named "vdd" and "gnd".

BUG: (11/24/04, SMR) When an arc connects from a port to itself, deleting the port crashes.
FIX: In "NodeInst.removePortInst()" make sure the number of connections is valid.

BUG: (11/23/04, SMR) Node Instance names are not drawn right if the instance is rotated/mirrored and its
     contents are not centered.
FIX: In ElectricObject.computeTextPoly() transform name text about the true node center.

IMP: (11/23/04, SMR) Implemented "multi-page schematics".  Commands in the Cell menu control it.
     All pages are actually in a single cell, spaced far apart.
