@@ -118,12 +118,6 @@ public class DebugMenus {
                 new com.sun.electric.tool.generator.layout.GateRegression(TSMC90.tech);
             }
         });
-		russMenu.addMenuItem("Gate Generator MOCMOS Regression", null,
-				             new ActionListener() {
-			public void actionPerformed(ActionEvent e) {
-				new com.sun.electric.tool.generator.layout.GateRegressionMocmos();
-			}
-		});
         russMenu.addMenuItem("create flat netlists for Ivan", null, new ActionListener() {
             public void actionPerformed(ActionEvent e) {
                 new com.sun.electric.tool.generator.layout.IvanFlat();
